WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141310
[iOS] don't get out of sync when interrupt/resume calls are not balanced
https://bugs.webkit.org/show_bug.cgi?id=141310
Summary
[iOS] don't get out of sync when interrupt/resume calls are not balanced
Eric Carlson
Reported
2015-02-05 15:58:41 PST
It is possible for MediaSession::endInterruption to be called several times when resuming, which confuses the MediaSession state machine.
Attachments
Proposed patch
(5.78 KB, patch)
2015-02-09 13:44 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-02-09 13:43:20 PST
<
rdar://problem/19572894
>
Eric Carlson
Comment 2
2015-02-09 13:44:27 PST
Created
attachment 246285
[details]
Proposed patch
WebKit Commit Bot
Comment 3
2015-02-10 07:47:54 PST
Comment on
attachment 246285
[details]
Proposed patch Clearing flags on attachment: 246285 Committed
r179869
: <
http://trac.webkit.org/changeset/179869
>
WebKit Commit Bot
Comment 4
2015-02-10 07:47:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug